fix: select z-index solved

--- a/src/app/modules/cloud-generator/cloud-generator.component.scss
+++ b/src/app/modules/cloud-generator/cloud-generator.component.scss
@@ -32,11 +32,11 @@
         @include flex(column, flex-start, center, nowrap);
         &__options {
           width: 80%;
-          background: rgba(255, 255, 255, 0.58);
           border-radius: 16px 16px 0 0;
+          backdrop-filter: blur(5px) saturate(176%);
+          -webkit-backdrop-filter: blur(5px) saturate(176%);
+          background-color: rgba(255, 255, 255, 0.75);
           box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-          backdrop-filter: blur(5.5px);
-          -webkit-backdrop-filter: blur(5.5px);
           border: 1px solid rgba(255, 255, 255, 0.16);
 
           .card-options {
@@ -116,11 +116,9 @@
           width: 80%;
           height: 50vh;
           @include flex(row, center, center, nowrap);
-          background: rgba(255, 255, 255, 0.58);
+          background-color: rgba(255, 255, 255, 0.75);
           border-radius: 0 0 16px 16px;
           box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-          backdrop-filter: blur(5.5px);
-          -webkit-backdrop-filter: blur(5.5px);
           border: 1px solid rgba(255, 255, 255, 0.16);
 
           .load-image {
